--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 body{
 	margin:0;
 	padding:0;
+    font-family: Open Sans;
 }
 @font-face {
     font-family: 'Open Sans';
@@ -59,11 +60,39 @@ body{
     font-style: normal;
 }
 input{
-	width:90%;
-	height: 70px;
+	min-width: 400px;
+	height: 40px;
 	line-height: 70px;
-	text-align: center;
+	text-align: left;
 	font-size:20px;
 	margin:0 auto;
+    padding-left:10px;
 	border:2px solid black;
+}
+
+.main-container-full{
+    width:100%;
+    height: 100vh;
+    min-height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+}
+form{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+button{
+    background-color:black;
+    cursor: pointer;
+    border:2px solid black;
+    padding:0 20px;
+    color:white;
+    font-size:16px;
+}
+h2.heading_main{
+    font-size:30px;
+    margin-bottom:10px;
 }
